// This file has been automatically generated, DO NOT EDIT

/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.apache.lucene.util.packed;

import org.apache.lucene.store.DataInput;
import org.apache.lucene.util.RamUsageEstimator;

import java.io.IOException;
import java.util.Arrays;

/**
 * Direct wrapping of 8-bits values to a backing array.
 * @lucene.internal
 */
final class Direct8 extends PackedInts.MutableImpl {
  // 每个数据需要8bit，所以数据用 byte数组来保存
  final byte[] values;

  Direct8(int valueCount) {
    super(valueCount, 8);
    values = new byte[valueCount];
  }

  Direct8(int packedIntsVersion, DataInput in, int valueCount) throws IOException {
    this(valueCount);
    in.readBytes(values, 0, valueCount);
    // because packed ints have not always been byte-aligned
    // 这里可以不用执行,因为remaining肯定为0
    final int remaining = (int) (PackedInts.Format.PACKED.byteCount(packedIntsVersion, valueCount, 8) - 1L * valueCount);
    for (int i = 0; i < remaining; ++i) {
      // 走不到这里
      assert false;
      in.readByte();
    }
  }

  @Override
  public long get(final int index) {
    return values[index] & 0xFFL;
  }

  @Override
  public void set(final int index, final long value) {
    values[index] = (byte) (value);
  }

  @Override
  public long ramBytesUsed() {
    return RamUsageEstimator.alignObjectSize(
        RamUsageEstimator.NUM_BYTES_OBJECT_HEADER
        + 2 * Integer.BYTES                       // valueCount,bitsPerValue
        + RamUsageEstimator.NUM_BYTES_OBJECT_REF) // values ref
        + RamUsageEstimator.sizeOf(values);
  }

  @Override
  public void clear() {
    Arrays.fill(values, (byte) 0L);
  }

  @Override
  public int get(int index, long[] arr, int off, int len) {
    assert len > 0 : "len must be > 0 (got " + len + ")";
    assert index >= 0 && index < valueCount;
    assert off + len <= arr.length;

    final int gets = Math.min(valueCount - index, len);
    for (int i = index, o = off, end = index + gets; i < end; ++i, ++o) {
      // & 0xFF就可以还原 源数据了
      arr[o] = values[i] & 0xFFL;
    }
    return gets;
  }

  @Override
  public int set(int index, long[] arr, int off, int len) {
    assert len > 0 : "len must be > 0 (got " + len + ")";
    assert index >= 0 && index < valueCount;
    assert off + len <= arr.length;
    // 该类bitsPerValue=8 表示一个源数据,即arr中的任意一个long元素，都能用8bit表示
    // 索引内部数组values的每个元素byte都能表达一个源数据
    // 从index开始，只能表达剩下valueCount -index个源数据
    // 而外部输入要求表达len个源数据，两者取小，只能表达这么多的源数据了
    final int sets = Math.min(valueCount - index, len);
    for (int i = index, o = off, end = index + sets; i < end; ++i, ++o) {
      values[i] = (byte) arr[o];
    }
    return sets;
  }

  @Override
  public void fill(int fromIndex, int toIndex, long val) {
    assert val == (val & 0xFFL);
    Arrays.fill(values, fromIndex, toIndex, (byte) val);
  }
}
