@startuml
'https://plantuml.com/class-diagram

abstract class Reader
abstract class Mutable
class MutableImpl
class Packed64SingleBlock.Packed64SingleBlock1
class Packed64SingleBlock.Packed64SingleBlock2
class Packed64SingleBlock.Packed64SingleBlock21
class Packed64SingleBlock.Packed64SingleBlock32
class Packed64SingleBlock

class Direct8
class Direct64
class Packed8ThreeBlocks
class Packed16ThreeBlocks
class Packed64


Reader <|-- Mutable
Mutable <|-- MutableImpl
Mutable <|-- GrowableWriter
MutableImpl <|-- Packed64SingleBlock
Packed64SingleBlock <|-- Packed64SingleBlock.Packed64SingleBlock1
Packed64SingleBlock <|-- Packed64SingleBlock.Packed64SingleBlock2
Packed64SingleBlock <|-- Packed64SingleBlock.Packed64SingleBlock21
Packed64SingleBlock <|-- Packed64SingleBlock.Packed64SingleBlock32
MutableImpl <|-- Direct8
MutableImpl <|-- Direct64
MutableImpl <|-- Packed8ThreeBlocks
MutableImpl <|-- Packed16ThreeBlocks
MutableImpl <|-- Packed64

abstract class Reader{
 + {abstract} long get(int index)
 + int get(int index, long[] arr, int off, int len)
 + {abstract}int size()
}

note left of Reader::get
读取数据源中指定位置index的数据
end note

note right of Reader::"get(int index, long[] arr, int off, int len)"
从指定位置index开始读取数据,
最多读取len个数据，
从arr[off]开始装载到arr中
end note

note left of Reader::size
获取实现类数据源中存储的数据个数
end note


abstract class Mutable{
+ {abstract} int getBitsPerValue()
+ {abstract} void set(int index, long value)
+ int set(int index, long[] arr, int off, int len)
+ void fill(int fromIndex, int toIndex, long val)
+ void clear()
+ void save(DataOutput out)
~ Format getFormat()
}

note left of Mutable::"set(int index, long value)"
往源数据数组中指定位置index设置value
end note

note right of Mutable::"set(int index, long[] arr, int off, int len)"
从arr中off位置最多取len个数据
往源数据数组中指定位置index装载
end note

note left of Mutable::fill
填充元素
end note

note right of Mutable::save
保存源数据到输出目的地
end note

class Packed64SingleBlock
note top: 单个block是long来表达，占据64位。\n 由于单个源数据占用的bit个数可能不会被64整除，\n 所以是对齐型，会空间浪费

class Packed64SingleBlock.Packed64SingleBlock21
note bottom: 每个源数据需要21个bit来表达

class Packed8ThreeBlocks
note bottom: 24bit 源数据, 需要3 byte block

class Packed16ThreeBlocks
note bottom: 48bit 源数据, 需要3 short block

class GrowableWriter
note left: 支持set源数据时，可变bitsPerValue
@enduml